--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Open Graph data -->
     <meta property="og:title" content="WebAgency - Future Digital Marketing"/>
     <meta property="og:type" content="website"/>
@@ -24,8 +24,6 @@
     <meta property="og:description" content="Description Here"/>
     <!-- Assets -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
-
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -41,12 +39,16 @@
     <a class="anchor" id="acceuil"></a>
     <div class="main">
         <div class="slideshow-container">
-            <a class="prev round" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next round" onclick="plusSlides(1)">&#10095;</a>
             <div class="intro">
                 <h1><span id="wa">WEBAGENCY </span>: L'AGENCE DE TOUS<br> VOS PROJETS!</h1>
                 <p>Vous avez un projet web? La webAgency vous aide à le réaliser!</p>
                 <a href="plusdinfos">Plus d'infos</a>
+            </div>
+            <div class="slider_nav prev">
+                <span>&nbsp; &#10094;</span>
+            </div>
+            <div class="slider_nav next">
+                <span>&#10095;&nbsp;</span>
             </div>
         </div>    
     <a class="anchor" id="serv"></a>
@@ -65,11 +67,11 @@
         <div class="flex-row"> 
                 <div id="courcont">
                     <img src="./try.svg" id="stat">
-                    <p><span>UX DESIGN</span><br>Afin que vos clients ne puissent plus se passer de vous,<br>Nous leur procurons la meilleur "User Experience" digitale possible. </p>
+                    <p><span>UX design</span><br>Afin que vos clients ne puissent plus se passer de vous,<br>Nous leur procurons la meilleur "User Experience" digitale possible. </p>
                 </div>
                 <div id="courcont">
                     <img src="./cubes.svg" id="cube">
-                    <p><span>UI DESIGN</span><br>Des designers toujours à la recherche de nouveautés<br>,pour que vous n'ayez jamais l'air derrière.</p>
+                    <p><span>UI design</span><br>Des designers toujours à la recherche de nouveautés<br>,pour que vous n'ayez jamais l'air derrière.</p>
                 </div>
                 <div id="courcont">
                     <img src="./pie.svg" id="pie">
@@ -101,7 +103,8 @@
                     </a>
                     <div class="overlay">
                     <div class="text">
-                        Hello World
+                        <p>Portfolio 4</p>
+                        <p>Lorem ipsum</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -118,7 +121,8 @@
                     </a>
                     <div class="overlay">
                         <div class="text">
-                            Hello World
+                            <p id="piece">Portfolio 4</p>
+                            <p>Lorem ipsum</p>
                         </div>
                         <div class="ico">
                             <button class="bt">
@@ -135,7 +139,8 @@
                     </a>
                  <div class="overlay">
                     <div class="text">
-                        Hello World
+                        <p>Portfolio 4</p>
+                        <p>Lorem ipsum</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -152,7 +157,8 @@
                 </a>
             <div class="overlay">
                     <div class="text">
-                        Hello World
+                        <p>Portfolio 4</p>
+                        <p>Lorem ipsum</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -169,7 +175,8 @@
                 </a>
                 <div class="overlay">
                     <div class="text">
-                        Hello World
+                        <p>Portfolio 4</p>
+                        <p>Lorem ipsum</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -185,7 +192,10 @@
                     <img src="images/portfolio/06.jpg" class="image" alt="Works"/>
                 </a>
                 <div class="overlay">
-                    <div class="text">Hello World</div>
+                    <div class="text">
+                        <p>Portfolio 4</p>
+                        <p>Lorem ipsum</p>
+                    </div>
                     <div class="ico">
                         <button class="bt">
                            <i class="far fa-eye"></i>
@@ -201,7 +211,8 @@
                 </a>
                 <div class="overlay">
                     <div class="text">
-                        Hello World
+                        <p>Portfolio 4</p>
+                        <p>Lorem ipsum</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -218,7 +229,8 @@
                 </a>
                 <div class="overlay">
                     <div class="text">
-                        Hello World
+                        <p>Portfolio 4</p>
+                        <p>Lorem ipsum</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
