--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="intro">
                 <h1><span id="wa">WEBAGENCY </span>: L'AGENCE DE TOUS<br> VOS PROJETS!</h1>
                 <p>Vous avez un projet web? La webAgency vous aide à le réaliser!</p>
-                <a href="plusdinfos">Plus d'infos</a>
+                <p><a href="plusdinfos">Plus d'infos</a></p>
             </div>
             <div class="slider_nav prev">
                 <span>&nbsp; &#10094;</span>
@@ -65,17 +65,17 @@
             <img src="images/main-feature.png" class="im" alt="Nos Services"/> 
         </div>
         <div class="flex-row"> 
-                <div id="courcont">
+                <div class="courcont">
                     <img src="./try.svg" id="stat">
-                    <p><span>UX design</span><br>Afin que vos clients ne puissent plus se passer de vous,<br>Nous leur procurons la meilleur "User Experience" digitale possible. </p>
+                    <p><span class="doms">UX design</span><br>Afin que vos clients ne puissent plus se passer de vous,<br>Nous leur procurons la meilleur "User Experience" digitale possible. </p>
                 </div>
-                <div id="courcont">
+                <div class="courcont">
                     <img src="./cubes.svg" id="cube">
-                    <p><span>UI design</span><br>Des designers toujours à la recherche de nouveautés<br>,pour que vous n'ayez jamais l'air derrière.</p>
+                    <p><span class="doms">UI design</span><br>Des designers toujours à la recherche de nouveautés<br>,pour que vous n'ayez jamais l'air derrière.</p>
                 </div>
-                <div id="courcont">
+                <div class="courcont">
                     <img src="./pie.svg" id="pie">
-                    <p><span>SEO</span> <br>Mais également de techniciens,<br>afin de vous garantir un résultat optimal.</p>
+                    <p><span class="doms">SEO</span> <br>Mais également de techniciens,<br>afin de vous garantir un résultat optimal.</p>
                 </div>
         </div>
     </div>
