--- a/index.html
+++ b/index.html
@@ -39,10 +39,15 @@
     <a class="anchor" id="acceuil"></a>
     <div class="main">
         <div class="slideshow-container">
+            <div class="mySlides">
+             <img src="./images/slider/bg1.jpg" alt="Fille">
+             </div>
+              <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+            
             <div class="intro">
                 <h1><span id="wa">WEBAGENCY </span>: L'AGENCE DE TOUS<br> VOS PROJETS!</h1>
                 <p>Vous avez un projet web? La webAgency vous aide à le réaliser!</p>
-                <p><a href="plusdinfos">Plus d'infos</a></p>
+                <a href="plusdinfos">Plus d'infos</a>
             </div>
             <div class="slider_nav prev">
                 <span>&nbsp; &#10094;</span>
@@ -66,15 +71,15 @@
         </div>
         <div class="flex-row"> 
                 <div class="courcont">
-                    <img src="./try.svg" id="stat">
+                    <img src="./images/ico/try.svg" id="stat" alt="Courbe">
                     <p><span class="doms">UX design</span><br>Afin que vos clients ne puissent plus se passer de vous,<br>Nous leur procurons la meilleur "User Experience" digitale possible. </p>
                 </div>
                 <div class="courcont">
-                    <img src="./cubes.svg" id="cube">
+                    <img src="./images/ico/cubes.svg" id="cube" alt="Cube">
                     <p><span class="doms">UI design</span><br>Des designers toujours à la recherche de nouveautés<br>,pour que vous n'ayez jamais l'air derrière.</p>
                 </div>
                 <div class="courcont">
-                    <img src="./pie.svg" id="pie">
+                    <img src="./images/ico/pie.svg" id="pie" alt="Camembert">
                     <p><span class="doms">SEO</span> <br>Mais également de techniciens,<br>afin de vous garantir un résultat optimal.</p>
                 </div>
         </div>
@@ -90,10 +95,10 @@
             <p>Voici quelques travaux dont nous sommes très fier, si cela ne vous ressemble pas, un designer fera ce qu'il faut pour que vous profitiez du site internet qui vous ressemble!</p>
         </div>
         <div class="btncont">
-            <a class="act"><span id="activ"></span>All Works</a>
-            <a>Creative</a>
-            <a>Corporate</a>
-            <a class="last">Portfolio</a>
+                    <a class="mainselected">All Works</a>
+                    <a>Creative</a>
+                    <a>Corporate</a>
+                    <a>Portfolio</a>
         </div>
         <div class="gal">
             <div class="responsive">
@@ -103,8 +108,8 @@
                     </a>
                     <div class="overlay">
                     <div class="text">
-                        <p>Portfolio 4</p>
-                        <p>Lorem ipsum</p>
+                        <p>Portfolio 1</p>
+                        <p>Nez</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -121,8 +126,8 @@
                     </a>
                     <div class="overlay">
                         <div class="text">
-                            <p id="piece">Portfolio 4</p>
-                            <p>Lorem ipsum</p>
+                            <p id="piece">Portfolio 2</p>
+                            <p>Lapin</p>
                         </div>
                         <div class="ico">
                             <button class="bt">
@@ -139,8 +144,8 @@
                     </a>
                  <div class="overlay">
                     <div class="text">
-                        <p>Portfolio 4</p>
-                        <p>Lorem ipsum</p>
+                        <p>Portfolio 3</p>
+                        <p>Pompadour</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -158,7 +163,7 @@
             <div class="overlay">
                     <div class="text">
                         <p>Portfolio 4</p>
-                        <p>Lorem ipsum</p>
+                        <p>Livre</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -175,8 +180,8 @@
                 </a>
                 <div class="overlay">
                     <div class="text">
-                        <p>Portfolio 4</p>
-                        <p>Lorem ipsum</p>
+                        <p>Portfolio 5</p>
+                        <p>Sac</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -193,8 +198,8 @@
                 </a>
                 <div class="overlay">
                     <div class="text">
-                        <p>Portfolio 4</p>
-                        <p>Lorem ipsum</p>
+                        <p>Portfolio 6</p>
+                        <p>Ville</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -211,8 +216,8 @@
                 </a>
                 <div class="overlay">
                     <div class="text">
-                        <p>Portfolio 4</p>
-                        <p>Lorem ipsum</p>
+                        <p>Portfolio 7</p>
+                        <p>Flêche</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -229,8 +234,8 @@
                 </a>
                 <div class="overlay">
                     <div class="text">
-                        <p>Portfolio 4</p>
-                        <p>Lorem ipsum</p>
+                        <p>Portfolio 8</p>
+                        <p>Top Secret</p>
                     </div>
                     <div class="ico">
                         <button class="bt">
@@ -245,18 +250,18 @@
     <a class="anchor" id="contact"></a>
 <div class="footer">
     <div class="ggwrap">
-        <section class="carte">
+        <div class="carte">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.505217048271!2d2.340915615602131!3d48.88670810666664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e4334868de3%3A0xcfc3870abe2b8519!2zQmFzaWxpa2EgU2FjcsOpLUPFk3Vy!5e0!3m2!1sde!2sde!4v1536713328008" width="100%" height="100%" allowfullscreen></iframe>    
-        </section>
+        </div>
         <div id="mapover"></div>
         <div class="contact">
             <form class="inlin" method="post" action="traitement.php">
                <fieldset>
                 <legend>
                     <h3>Contact Info</h3>
-                    <p><span id="comp">WebAgency SAS</span><br>
+                    <h4><span id="comp">WebAgency SAS</span><br>
                        25 rue d'Hauteville 75010 Paris<br>
-                       Tel: 01 02 03 04 05<br></p>
+                       Tel: 01 02 03 04 05<br></h4>
                 </legend>
                 <div>
                 <input type="text" name="name" id="name" placeholder="Name"/>
