--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p>Voici quelques travaux dont nous sommes très fier, si cela ne vous ressemble pas, un designer fera ce qu'il faut pour que vous profitiez du site internet qui vous ressemble!</p>
         </div>
         <div class="btncont">
-                    <button class="mainselected" autofocus="">All Works</button>
+                    <button class="butt mainselected" autofocus="">All Works</button>
                     <button class="butt" autofocus=""> Creative</button>
                     <button class="butt" autofocus="">Corporate</button>
                     <button class="butt last" autofocus="">Portfolio</button>
