--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary">
     <!-- Assets -->
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js" integrity="sha384-kW+oWsYx3YpxvjtZjFXqazFpA7UP/MbiY4jvs+RWZo2+N94PFZ36T6TFkc9O3qoB" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -65,21 +65,24 @@
         </div>
         <div class="flex-row"> 
                 <div class="courcont">
-                    <div class="fa-4x">
-                        <span class="fa-layers fa-fw">
-                            <i class="far fa-circle" data-fa-transform="grow-10"></i>
-                            <i class="fas fa-chart-pie" data-fa-transform="shrink-8"></i>
-                            <i class="fas fa-circle" data-fa-transform="shrink-20 right-11.5"></i>
+                        <span class="fa-stack fa-2x">
+                            <i class="fa fa-circle-thin fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa fa-pie-chart fa-stack-1x" aria-hidden="true"></i>
                         </span>
-                    </div>
                     <p><span class="doms">UX design</span><br>Afin que vos clients ne puissent plus se passer de vous,<br>Nous leur procurons la meilleur "User Experience" digitale possible. </p>
                 </div>
                 <div class="courcont">
-                    <img src="./images/ico/cubes.svg" id="cube" alt="Cube">
+                    <span class="fa-stack fa-2x">
+                            <i class="fa fa-circle-thin fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa fa-cubes fa-stack-1x" aria-hidden="true"></i>
+                        </span>
                     <p><span class="doms">UI design</span><br>Des designers toujours à la recherche de nouveautés<br>,pour que vous n'ayez jamais l'air derrière.</p>
                 </div>
                 <div class="courcont">
-                    <img src="./images/ico/pie.svg" id="pie" alt="Camembert">
+                    <span class="fa-stack fa-2x">
+                            <i class="fa fa-circle-thin fa-stack-2x" aria-hidden="true"></i>
+                            <i class="fa fa-line-chart fa-stack-1x" aria-hidden="true"></i>
+                        </span>
                     <p><span class="doms">SEO</span> <br>Mais également de techniciens,<br>afin de vous garantir un résultat optimal.</p>
                 </div>
         </div>
