--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                     <i class="fa fa-line-chart fa-2x" aria-hidden="true"></i>
                       <i class="fa fa-circle faa-lg" aria-hidden="true"></i>  
                     </span> 
-                    <p><span class="doms">UX design</span><br>Afin que vos clients ne puissent plus se passer de vous,<br>Nous leur procurons la meilleur "User Experience" digitale possible. </p>
+                    <h3 class="doms">UX design</h3>
+                    <p>Afin que vos clients ne puissent plus se passer de vous, Nous leur procurons la meilleur "User Experience" digitale possible. </p>
                 </div>
                 <div class="courcont">
                    <span class="c">
