--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
         <div class="flex-row"> 
                 <div class="courcont">
                    <span class="c">
-                    <i class="fa fa-line-chart fa-2x" aria-hidden="true"></i>
-                      <i class="fa fa-circle faa-lg" aria-hidden="true"></i>  
+                   <i class="fa fa-circle fa-sm" aria-hidden="true"></i>  
+                    <i class="fa fa-line-chart" aria-hidden="true"></i>
+
                     </span> 
-                    <h3 class="doms">UX design</h3>
-                    <p>Afin que vos clients ne puissent plus se passer de vous, Nous leur procurons la meilleur "User Experience" digitale possible. </p>
+                    <p><span class="doms">UX design</span><br>Afin que vos clients ne puissent plus se passer de vous, Nous leur procurons la meilleur "User Experience" digitale possible. </p>
                 </div>
                 <div class="courcont">
                    <span class="c">
-                    <i class="fa fa-cubes fa-2x" aria-hidden="true"></i>
-                      <i class="fa fa-circle faa-lg" aria-hidden="true"></i>  
+                   <i class="fa fa-circle fa-sm" aria-hidden="true"></i>
+                    <i class="fa fa-cubes " aria-hidden="true"></i>
                     </span> 
                     <p><span class="doms">UI design</span><br>Des designers toujours à la recherche de nouveautés<br> ,pour que vous n'ayez jamais l'air derrière.</p>
                 </div>
                 <div class="courcont">
                    <span class="c">
-                    <i class="fa fa-pie-chart fa-2x" aria-hidden="true"></i>
-                      <i class="fa fa-circle faa-lg" aria-hidden="true"></i>  
+                        <i class="fa fa-circle fa-sm" aria-hidden="true"></i>  
+                        <i class="fa fa-pie-chart" aria-hidden="true"></i>
                     </span> 
                     <p><span class="doms">SEO</span><br> Mais également de techniciens,<br>afin de vous garantir un résultat optimal.</p>
                 </div>
