--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
                     <i class="fa fa-line-chart" aria-hidden="true"></i>
 
                     </span> 
-                    <p><span class="doms">UX design</span><br>Afin que vos clients ne puissent plus se passer de vous, Nous leur procurons la meilleur "User Experience" digitale possible. </p>
+                    <p><span class="doms">UX design</span><br>Afin que vos clients ne puissent plus se passer de vous, ous leur procurons la meilleur "User Experience" digitale possible. </p>
                 </div>
                 <div class="courcont">
                    <span class="c">
                    <i class="fa fa-circle fa-sm" aria-hidden="true"></i>
                     <i class="fa fa-cubes " aria-hidden="true"></i>
                     </span> 
-                    <p><span class="doms">UI design</span><br>Des designers toujours à la recherche de nouveautés<br> ,pour que vous n'ayez jamais l'air derrière.</p>
+                    <p><span class="doms">UI design</span><br>Des designers toujours à la recherche de nouveautés ,pour que vous n'ayez jamais l'air derrière.</p>
                 </div>
                 <div class="courcont">
                    <span class="c">
                         <i class="fa fa-circle fa-sm" aria-hidden="true"></i>  
                         <i class="fa fa-pie-chart" aria-hidden="true"></i>
                     </span> 
-                    <p><span class="doms">SEO</span><br> Mais également de techniciens,<br>afin de vous garantir un résultat optimal.</p>
+                    <p><span class="doms">SEO</span><br> Mais également de techniciens, afin de vous garantir un résultat optimal.</p>
                 </div>
         </div>
     </div>
