--- a/index.html
+++ b/index.html
@@ -36,15 +36,7 @@
         <div class="slideshow-container">
             <div class="mySlides">
              <img src="./images/slider/bg1.jpg" alt="Fille">
-             </div>
-              <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-            
-            <div class="intro">
-                <h1><span id="wa">WEBAGENCY </span>: L'AGENCE DE TOUS<br> VOS PROJETS!</h1>
-                <p>Vous avez un projet web? La webAgency vous aide à le réaliser!</p>
-                <a href="plusdinfos">Plus d'infos</a>
-            </div>
-            <div class="pr">
+             <div class="pr">
                 <span>
                 <i class="fa fa-angle-left fa-2x" aria-hidden="true"></i> 
                 </span> 
@@ -53,6 +45,14 @@
                 <span>
                 <i class="fa fa-angle-right fa-2x" aria-hidden="true"></i> 
                 </span> 
+            </div>
+             </div>
+              <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+            
+            <div class="intro">
+                <h1><span id="wa">WEBAGENCY </span>: L'AGENCE DE TOUS<br> VOS PROJETS!</h1>
+                <p>Vous avez un projet web? La webAgency vous aide à le réaliser!</p>
+                <a href="plusdinfos">Plus d'infos</a>
             </div>
         </div>
     </div> 
@@ -66,7 +66,7 @@
             <line x1="25" y1="15" x2="175" y2="15" />
             <circle cx="100" cy="15" r="8"/>
         </svg>
-        <p>Vous n'êtes encore pas assez connu dans votre domaine? Nous sommes la pour vous donner les moyens d'exploiter tout le potentiel de votre entreprise.</p>
+        <p>Vous n'êtes encore pas assez connu dans votre domaine? Nous sommes là pour vous donner les moyens d'exploiter tout le potentiel de votre entreprise.</p>
     </div>
     <div class="flex-container" >
         <div class="flex-row">
@@ -79,21 +79,21 @@
                     <i class="fa fa-line-chart" aria-hidden="true"></i>
 
                     </span> 
-                    <p><span class="doms">UX design</span><br>Afin que vos clients ne puissent plus se passer de vous, ous leur procurons la meilleur "User Experience" digitale possible. </p>
+                    <p><span class="doms">UX design</span><br>Afin que vos clients ne puissent plus se passer de vous, nous leur procurons la meilleure "User Experience" digitale possible. </p>
                 </div>
                 <div class="courcont">
                    <span class="c">
                    <i class="fa fa-circle fa-sm" aria-hidden="true"></i>
                     <i class="fa fa-cubes " aria-hidden="true"></i>
                     </span> 
-                    <p><span class="doms">UI design</span><br>Des designers toujours à la recherche de nouveautés ,pour que vous n'ayez jamais l'air derrière.</p>
+                    <p><span class="doms">UI design</span><br>Des designers toujours à la recherche de nouveautés, pour que vous n'ayez jamais l'air derrière.</p>
                 </div>
                 <div class="courcont">
                    <span class="c">
                         <i class="fa fa-circle fa-sm" aria-hidden="true"></i>  
                         <i class="fa fa-pie-chart" aria-hidden="true"></i>
                     </span> 
-                    <p><span class="doms">SEO</span><br> Mais également de techniciens, afin de vous garantir un résultat optimal.</p>
+                    <p><span class="doms">SEO</span><br> Mais également des techniciens, afin de vous garantir un résultat et des performances optimales.</p>
                 </div>
         </div>
     </div>
@@ -107,7 +107,7 @@
                 <line x1="25" y1="15" x2="175" y2="15" />
 	            <circle cx="100" cy="15" r="8"/>
              </svg>
-            <p>Voici quelques travaux dont nous sommes très fier, si cela ne vous ressemble pas, un designer fera ce qu'il faut pour que vous profitiez du site internet qui vous ressemble!</p>
+            <p>Voici quelques travaux dont nous sommes très fiers, si cela ne vous ressemble pas, un designer fera ce qu'il faut pour que vous profitiez du site internet qui vous ressemble!</p>
         </div>
         <div class="btncont">
                     <button class="butt mainselected" autofocus="">All Works</button>
