--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
             <p>Voici quelques travaux dont nous sommes très fiers, si cela ne vous ressemble pas, un designer fera ce qu'il faut pour que vous profitiez du site internet qui vous ressemble!</p>
         </div>
         <div class="btncont">
-                    <button class="butt mainselected" autofocus="">All Works</button>
-                    <button class="butt" autofocus=""> Creative</button>
-                    <button class="butt" autofocus="">Corporate</button>
-                    <button class="butt last" autofocus="">Portfolio</button>
+                    <button class="butt mainselected">All Works</button>
+                    <button class="butt" > Creative</button>
+                    <button class="butt">Corporate</button>
+                    <button class="butt last">Portfolio</button>
         </div>
         <div class="gal">
             <div class="responsive">
