--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="./images/ico/favicon.ico">
     <!-- Open Graph data -->
     <meta property="og:title" content="WebAgency - Future Digital Marketing"/>
     <meta property="og:type" content="website"/>
