--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          </ul>
     </div>
 </header>
-    <a class="anchor" id="acceuil"></a>
+       <a class="anchor" id="acceuil"></a>
     <section id="show">
         <div class="container">
         <div class="slideshow-container">
@@ -48,7 +48,7 @@
                 </span> 
             </div>
              </div>
-              <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+              <input type="range" min="1" max="100" value="50" class="slider" autofocus id="myRange">
             
             <div class="intro">
                 <h1><span id="wa">WEBAGENCY </span>: L'AGENCE DE TOUS<br> VOS PROJETS!</h1>
