--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
                 <div class="contact">
                     <form class="inlin" method="post" action="traitement.php">
                        <fieldset>
-                        <legend>
+                           <div>
                             <h3>Contact Info</h3>
                             <h4><span id="comp">WebAgency SAS</span><br>
                                25 rue d'Hauteville 75010 Paris<br>
                                Tel: 01 02 03 04 05<br></h4>
-                        </legend>
+                           </div>
                         <div>
                         <input type="text" name="name" id="name" placeholder="Name"/>
                         </div>
