--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:image" content="http://webagency.com/images/logo.jpg"/>
     <meta property="og:description" content="Website Creator"/>
     <meta name="author" content="Mehdi Hammouda">
+     <meta name="description" content="Création de site internet, Création de site web,Conseils web, Référencement, Design, Marketing web, Applications mobile ">
     <title>WEBAGENCY - L'agence de tous vos projets</title>
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary">
@@ -26,7 +27,7 @@
             <li class="right"><a href="#contact">Contact</a></li>
             <li class="right"><a href="#portfolio">Portfolio</a></li>
             <li class="right"><a href="#serv">Services</a></li>
-            <li class="right"><a class="active" href="#acceuil">Accueil</a>  </li>
+            <li class="right"><a class="active" href="#acceuil">Accueil</a></li>
             <li><a href="home"><img src="images/logo.png" alt="Logo" id="logo"/></a></li>
          </ul>
     </div>
