--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <header>
     <div class="navbar">
         <ul class="nav">
-            <li class="right"><a href="#contact">Contact</a></li>
-            <li class="right"><a href="#portfolio">Portfolio</a></li>
-            <li class="right"><a href="#serv">Services</a></li>
-            <li class="right"><a class="active" href="#acceuil">Accueil</a></li>
-            <li><a href="home"><img src="images/logo.png" alt="Logo" id="logo"/></a></li>
+            <li class=" search right"><a href="#contact">Contact</a></li>
+            <li class="search right"><a href="#portfolio">Portfolio</a></li>
+            <li class="search right"><a href="#serv">Services</a></li>
+            <li class="search right"><a class="active" href="#accueil">Accueil</a></li>
+            <li class="log"><a href="home"><img src="images/logo.png" alt="Logo" id="logo"/></a></li>
          </ul>
     </div>
 </header>
